// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SelectedSamples /> should render 1`] = `
<Fragment>
  <SelectedSamplesLabel
    count={1}
  />
  <SelectedSamples__SelectedSamplesListGroupContainer
    count={1}
  >
    <ListGroup
      bsClass="list-group"
    >
      <ListGroupItem
        allowFocus={false}
        disabled={true}
        key="foo"
      >
        bar
      </ListGroupItem>
    </ListGroup>
  </SelectedSamples__SelectedSamplesListGroupContainer>
</Fragment>
`;

exports[`<SelectedSamples /> should return when [samples.length=0] 1`] = `
<Fragment>
  <SelectedSamplesLabel
    count={0}
  />
  <SelectedSamples__SelectedSamplesListGroupContainer
    count={0}
  >
    <ListGroup
      bsClass="list-group"
    />
  </SelectedSamples__SelectedSamplesListGroupContainer>
</Fragment>
`;
